--- a/secondpage/style.css
+++ b/secondpage/style.css
@@ -43,6 +43,7 @@ width: 90vh;
     margin-top: 3.5vh;
      height:25px;
     width: 25px;
+    
 }
 #signin_signup_id{
     margin-top: 2.5vh;
@@ -61,74 +62,96 @@ width: 90vh;
   height: 6vh;
   color: rgb(218, 218, 218);
 }
-#girlimage_id{
+#girlimg_id{
     position: absolute;
     height:87.8vh;
     width: 30vw;
-margin-left: 69vw;
 }
-#arrowimg_id{
-    margin-top: 1.5vh;
-    margin-right: 2vw;
-    height:20px;
-    width: 20px;
-}
-#emaildiv_id label {
-  display: block;
-  margin-bottom: 5px;
-}
-#passworddiv_id label {
-  display: block;
-  margin-top: 3vh;
-  margin-bottom: 5px;
-}
-#h1_id{
-    margin-top: 12vh;
-    margin-left: 20vw;
-}
-#emaildiv_id input{
-    border: 1px solid rgba(226, 232, 240, 1);
-  width: 52vw;
-  height: 6vh;
-  border-radius: 5px;
-}
-
-#passworddiv_id input{
-     border: 1px solid rgba(226, 232, 240, 1);
-  width: 52vw;
-  height: 6vh;
-  border-radius: 5px;
+h1{
+    margin-top: 6vh;
+    margin-left: 53vw;
 }
 form{
-    margin-left: 5vw;
+    margin-left: 40vw;
 }
-#signinbutton2_id{
-    width: 8vw;
+#createbutton_id{
     height: 6vh;
     background-color: black;
     color: white;
     border-radius: 8px;
 }
 
-#secondsignindiv_id{
+#creatediv_id{
     border: 1px solid black;
-    width: 8vw;
+    width: 12vw;
     height: 6vh;
     display: flex;
     background-color: black;
     border-radius: 8px;
-    margin-top: 5vh;
+    margin-top: 2.5vh;
 }
- #divider {
+#arrowimg_id{
+    margin-top: 1.5vh;
+    margin-left: 2vw;
+    height:20px;
+    width: 20px;
+
+}
+#fullname_id_div{
+    display: flex;
+    gap: 2vw;
+}
+#fullname_id_div input{
+    border: 1px solid rgba(226, 232, 240, 1);
+    border-radius: 5px;
+    width: 20vw;
+    height: 6vh;
+}
+#username_id label{
+    margin-top: 2vh;
+    display: block;
+}
+#username_id input{
+    border: 1px solid rgba(226, 232, 240, 1);
+    border-radius: 5px;
+    width: 43vw;
+    height: 6vh;
+}
+#email_id label{
+    margin-top: 2vh;
+    display: block;
+}
+#email_id input{
+     border: 1px solid rgba(226, 232, 240, 1);
+    border-radius: 5px;
+    width: 43vw;
+    height: 6vh;
+}
+#pass_main_div_id{
+    display: flex;
+    margin-top: 3vh;
+    gap: 5vw;
+}
+#pass_main_div_id label{
+    display: block;
+}
+#pass_main_div_id input{
+    margin-top: 2vh;
+    border: 1px solid rgba(226, 232, 240, 1);
+    border-radius: 5px;
+    width: 20vw;
+    height: 6vh;
+}
+#divider {
             display: flex;
             align-items: center;
-            margin-left: 5vw ;
-            margin-top: 5vh;
+            margin-left: 40vw ;
+            margin-top: 3vh;
             gap: 15px;
         }
 
         #line {
-             width: 25vw;
+             width: 20vw;
             border: 1px solid #ddd;
             height: 1px;
           background-color: #ddd;
@@ -140,7 +163,7 @@ form{
         }
 footer{
     display: flex;
-    margin-left: 15vw;
+    margin-left: 45vw;
     gap: 4vw;
     margin-top: 2vh;
 }
@@ -181,6 +204,4 @@ footer p{
     height: 5.5vh;
     border-radius: 5px;
 }
-
-
 
