--- a/fourthpage/style.css
+++ b/fourthpage/style.css
@@ -134,11 +134,12 @@ width:50px
         }
 
         .course-image {
-            width: 90px;
-            height: 60px;
+            width: 110px;
+            height: 80px;
             border-radius: 4px;
             object-fit: cover;
             background: #ddd;
+            margin-top: 1vh;
         }
 
         .course-details {
